cfn_benchmark/cfn_templates/joelicatajr__aws-cf-cloudflare-ip-ranges/cloudflare_security_group.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Group with predefined IP ranges for inbound rules.

Resources:
  CloudflareSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: 'cloudflare-full-ip-list'
      GroupDescription: 'Security group for Cloudflare IP ranges'
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        # IPv4 ranges
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 173.245.48.0/20
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 173.245.48.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 103.21.244.0/22
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 103.21.244.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 103.22.200.0/22
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 103.22.200.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 103.31.4.0/22
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 103.31.4.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 141.101.64.0/18
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 141.101.64.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 108.162.192.0/18
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 108.162.192.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 190.93.240.0/20
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 190.93.240.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 188.114.96.0/20
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 188.114.96.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 197.234.240.0/22
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 197.234.240.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 198.41.128.0/17
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 198.41.128.0/17
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 162.158.0.0/15
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 162.158.0.0/15
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 104.16.0.0/13
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 104.16.0.0/13
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 104.24.0.0/14
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 104.24.0.0/14
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 172.64.0.0/13
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 172.64.0.0/13
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 131.0.72.0/22
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 131.0.72.0/22
        # IPv6 ranges
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2400:cb00::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2400:cb00::/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2606:4700::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2606:4700::/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2803:f800::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2803:f800::/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2405:b500::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2405:b500::/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2405:8100::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2405:8100::/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2a06:98c0::/29
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2a06:98c0::/29
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: 2c0f:f248::/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: 2c0f:f248::/32
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIpv6: ::/0

Parameters:
  VPCId:
    Type: 'AWS::EC2::VPC::Id'
    Description: 'Enter the VPC ID where the security group should be created.'

Outputs:
  SecurityGroupId:
    Description: 'The ID of the security group'
    Value: !Ref CloudflareSecurityGroup
